--- a/styles-basics/index.html
+++ b/styles-basics/index.html
@@ -31,6 +31,25 @@
                 <p id="aside-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi eum at consectetur tenetur quasi atque exercitationem, minus quam, labore, aliquid magnam porro neque debitis sapiente ipsam placeat. Id officia facere atque ducimus animi aliquam in ad, rerum qui ex ea eligendi tempore hic error minus praesentium, eius doloribus at maiores.</p>
             </aside>
         </section>
+
+        <section id="main-misc">
+            <div id="anim">
+                <h3>Animation</h3>
+                <div id="anim-div"></div>
+            </div>
+
+            <div id="grid">
+                <h3>Grid</h3>
+                <div id="grid-container">
+                    <div id="one">ONE</div>
+                    <div id="two">TWO</div>
+                    <div id="three">THREE</div>
+                    <div id="four">FOUR</div>
+                    <div id="five">FIVE</div>
+                    <div id="six">SIX</div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
