added buttons and music bars

--- a/styles-basics/index.html
+++ b/styles-basics/index.html
@@ -49,6 +49,23 @@
                     <div id="six">SIX</div>
                 </div>
             </div>
+
+            <div id="buttons">
+                <h3>Buttons</h3>
+                <button class="button primary-button">Primary</button>
+                <button class="button secondary-button">Secondary</button>
+            </div>
+
+            <div id="music">
+                <h3>Music</h3>
+                <div id="music-bars">
+                    <div id="first-bar" class="bar"></div>
+                    <div id="second-bar" class="bar"></div>
+                    <div id="third-bar" class="bar"></div>
+                    <div id="fourth-bar" class="bar"></div>
+                    <div id="fifth-bar" class="bar"></div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
